--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,153 @@
-.caixa{
-    text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+
+body{
+    background: url(../img/imagemdefundo.jpg) no-repeat center;/**imagem de fundo  
+    centralizada**/
+    background-size:cover;
+   margin:0%;
+   
+   
+
 }
-.banner video{
-    width:300;
+header{
+    
+    width: 100%;
+    height: 12vh;
+}
+header img{ /** imagem do logo*/
+    width:100px;
+    height: 100px;
+   
+}
+.pai{
+    display:flex;
+    margin-top: 2%;
+            justify-content: center;
+}
+h1{
+    text-align: center;
+    font-size: 5vh;
+    margin-left: 10%;
+    margin-right: 10%;
+  
+}
+.caixa{
+    background-color: rgba(243, 235, 208, 0.41);
+        border: 3px solid black;
+            border-radius: 10px;
+                position: relative;
+                    width: 90%;
+
+}
+.campos-de-selecao{
+    margin-top: 5vh;
+       text-align: center;
+                font-size: 5vh;
+                    line-height: 30%;
+}
+label{
+    margin-left: 35%;
+}
+.j{
+    display: block;
+        
+}
+#sz{
+            width: 50%;
+            height: 5vh;
+            border: 1px solid #000000;
+            border-radius: 10vh;
+            text-align: center;
+            font-size: 2.5vh;
+}
+.pos2{
+    display: flex;
+    justify-content: center;
+}
+.pos5{
+    display: flex;
+    justify-content: center;
+}
+.div1{
+    color: red
+}
+p{
+    align-items: center;
+    color: black;
+    
+}
+h2{
+    font-size: 5vh;
+}
+#myDIV{
+   text-align: left;
+    display:none;
+    
+}
+.pos3{
+    justify-content: center;
+    display: flex;
+    margin-top: 3%;
+}
+#condida{
+    display: none;
+}
+#Selector{
+    font-size: 4vh;
+    box-sizing: content-box;
+
+}
+button{ 
+  background-color: white;
+        margin-top: 1%;
+        font-family: "Roboto", sans-serif;
+            font-size: 5vh;
+                border-radius: 13px;
+}
+#metodo{
+        color: black;
+        width: 15vh;
+        height: 4vh;
+        font-size: 4vh;
+}
+input[type="radio"] {
+    background-color: #fff;
+    margin: 0px;
+    font: inherit;
+    color: currentColor;
+    width: 3vh;
+    height: 3.15vh;
+    border: 0.15em solid currentColor;
+    border-radius: 50%;
+  }
+.pos1{
+    display:  flex;
+    justify-content: center;
+}
+.pos4{
+    display:  flex;
+    justify-content: center;
+}
+.pos{
+    display:  flex;
+    justify-content: center;
+}
+#Resultado{
+    color: white;
+    text-shadow: black 2px 2px;
+}
+.results{
+    display: none;
+    border: 1px white solid;
+    background-color: rgba(243, 235, 208, 0.601);
+    margin-bottom: 0.5%;
+}
+Select{
+        font-family: "Roboto", sans-serif;
+        width:20%;
+}
+Select:hover{
+    background: black;
+        color: white
 }
