ATUALIZAÇÃO DE FUNDO

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,7 +2,7 @@
 
 
 body{
-    background: url(../img/imagem\ de\ fundo..jpg) no-repeat center;/**imagem de fundo  
+    background: url(../img/giflogo.gif) no-repeat center;/**imagem de fundo  
     centralizada**/
     background-size:cover;
    margin:0%;
